# pmrs-cli

./: Cargo.toml  README.md
src/: cli.yaml  main.rs
