[package]
name = "pmrs-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pmrs = { path="../pmrs" , version = "0.0" }
clap = { version = "3.2", features = ["derive"] }
strum = { version = "0.24" }
strum_macros = { version = "0.24" }
env_logger = { version = "0.9" }
log = { version = "0.4" }
